# anibuddy

./: Cargo.toml  LICENSE  PKGBUILD  README.md  anibuddy.install  config.toml.example
src/: config.rs  delta_compression.rs  image_loader.rs  main.rs  media_loader.rs  overlay.rs  renderer.rs
src/bc7/: block_compressor.rs  decode.rs  encode.rs  mod.rs  settings.rs
src/bc7/decode/: block.rs
src/bc7/encode/: bc7.rs
src/bc7/shader/: bc7.wgsl
