[package]
name = "konata-dance-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
bytemuck = { version = "1.23.0", features = ["derive", "avx512_simd"] }
env_logger = "0.11.8"
glob = "0.3.2"
image = "0.25.6"
include_dir = "0.7.4"
log = "0.4.27"
pollster = "0.4.0"
raw-window-handle = "0.6.2"
smithay-client-toolkit = { version = "0.19.2", features = ["calloop"] }
wayland-backend = { version = "0.3.10", features = ["client_system", "raw-window-handle"] }
wayland-client = "0.31.10"
wgpu = "25.0.0"
