[package]
name = "konata-dance-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
bytemuck = { version = "1.23.0", features = ["derive", "avx512_simd"] }
clap = { version = "4.5.38", features = ["derive"] }
dirs = "6.0.0"
env_logger = "0.11.8"
futures-intrusive = "0.5.0"
gif = "0.13.1"
glob = "0.3.2"
image = "0.25.6"
log = "0.4.27"
png = "0.17.16"
pollster = "0.4.0"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.22"
wgpu = "25.0.0"
winit = "0.30.11"

# [profile.release]
# opt-level = 3
# lto = "fat"
# strip = true
# codegen-units = 1
